# Krusty

./: .gitignore  AUDIT_TODO.md  CLAUDE.md  Cargo.toml  KRAB.md  LICENSE  README.md  install.sh
.github/homebrew/: krusty.rb
.github/workflows/: ci.yml  release.yml
crates/krusty-cli/: Cargo.toml
crates/krusty-cli/src/: main.rs
crates/krusty-cli/src/tui/: app.rs  app_builder.rs  extensions.rs  mod.rs  render_model.rs
crates/krusty-core/: Cargo.toml
crates/krusty-core/src/: constants.rs  lib.rs  paths.rs
crates/krusty-core/src/acp/: agent.rs  bridge.rs  processor.rs  server.rs  session.rs
crates/krusty-core/src/agent/: build_context.rs  cache.rs  cancellation.rs  event_bus.rs  events.rs  hooks.rs  mod.rs  pinch_context.rs  state.rs  subagent.rs  summarizer.rs  user_hooks.rs
crates/krusty-core/src/ai/: glm.rs  mod.rs  models.rs  opencodezen.rs  openrouter.rs  providers.rs  sse.rs  stream_buffer.rs  streaming.rs  title.rs  transform.rs  types.rs
crates/krusty-core/src/auth/: browser_flow.rs  device_flow.rs  mod.rs  oauth.rs  pkce.rs  storage.rs  token_manager.rs  types.rs
crates/krusty-core/src/extensions/: bun_runtime.rs  github.rs  manifest.rs  mod.rs  types.rs
crates/krusty-core/src/index/: codebase.rs  embeddings.rs  indexer.rs  insights.rs  mod.rs  parser.rs  retrieval.rs
crates/krusty-core/src/lsp/: builtin.rs  client.rs  diagnostics.rs  downloader.rs  manager.rs  mod.rs  transport.rs
crates/krusty-core/src/mcp/: client.rs  config.rs  manager.rs  mod.rs  protocol.rs  tool.rs  transport.rs
examples/: terminal_test.rs
(+224 files in other folders)
